# event-elo

./: README.md  event_history.py  event_results.py  main.py  pyproject.toml  rating_history.py  streamlit_app.py  test.ipynb
.streamlit/: config.toml
backend/: add.ipynb  calculate.ipynb  predict.ipynb
data/: event_history.json  predictions.pkl  rankings.parquet  rating_history.parquet  rd_history.parquet  summaries.pkl  summaries_unclassified.pkl  to_add.ods  to_predict.ods
pages/: event_history.py  event_results.py  main_page.py  players.py  predictions.py  rating_history.py  test.py
