[project]
name = "event-elo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "orjson>=3.11.4",
    "pandas>=2.3.3",
    "pip>=25.3",
    "plotly>=6.3.1",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "streamlit>=1.51.0",
    "streamlit-aggrid>=1.1.9",
    "streamlit-themes>=0.1.0",
    "tqdm>=4.67.1",
]
